# cpp-xpx-storage-sdk

./: .gitignore  .gitmodules  CMakeGlobalSettings.cmake  CMakeLists.txt  README.md  todo.txt  todo2.txt  todo3.docx
catapult/: CMakeLists.txt  exceptions.h  types.h
catapult/crypto/: Hashes.cpp  Hashes.h  KeyUtils.cpp  KeyUtils.h  Signer.cpp  Signer.h
catapult/ionet/: AppendContext.cpp  AppendContext.h  BufferedPacketIo.cpp  IoEnums.cpp  IoTypes.h  Node.h  Packet.h  PacketExtractor.cpp  PacketExtractor.h  PacketHeader.cpp  PacketHeader.h  PacketPayload.cpp  PacketPayload.h  PacketSocket.cpp  PacketSocketOptions.h  PacketType.h  SecureSignedPacketIo.cpp  SocketOperationCode.h  WorkingBuffer.cpp  WorkingBuffer.h
catapult/model/: EntityPtr.h  FacilityCode.h
catapult/net/: Challenge.cpp  Challenge.h  ConnectionSettings.h  VerifyPeer.cpp  VerifyPeer.h
catapult/utils/: ByteArray.h  Casting.h  ConfigurationValueParsers.cpp  ConfigurationValueParsers.h  HexParser.cpp  HexParser.h  IntegerMath.cpp  MemoryUtils.h  NonCopyable.h
examples/: CMakeLists.txt  testActionList.cpp  testDownload.cpp  testDrive.cpp  testSingleNodeDiscovery.cpp  testValidatorConnection.cpp
examples/client/: CMakeLists.txt  client.cpp
examples/client2/: CMakeLists.txt  client.cpp  pch.h
examples/common/: ConnnectionAdapter.cpp  ConnnectionAdapter.h
examples/download/: CMakeLists.txt  main.cpp
examples/downloadFile/: CMakeLists.txt  downloadFile.cpp
examples/downloadFileFlat/: CMakeLists.txt  downloadFileFlat.cpp
examples/extensionEmulator/: CMakeLists.txt  extensionEmulator.cpp
examples/kademlia_ex/: CMakeLists.txt  kademlia_ex.cpp  script  test_20000.cpp
examples/kademlia_ex_timeouts/: CMakeLists.txt  kademlia_timeouts_ex.cpp  test_20000_timeouts.cpp
examples/libtorrent/: CMakeLists.txt
examples/libtorrenttest/: CMakeLists.txt  libtorrenttest.cpp
examples/messenger-echo-server/: CMakeLists.txt  main.cpp
examples/modifyDrive/: CMakeLists.txt  SampleReplicator.cpp  SampleReplicator.h  modifyDrive.cpp
examples/modifyDriveFlat/: CMakeLists.txt  modifyDriveFlat.cpp
examples/modifyDriveFlat2/: CMakeLists.txt  modifyDriveFlat.cpp  modifyDriveFlat2.cpp
examples/modifyDriveFlat3/: CMakeLists.txt  catchingUp.cpp  modifyDriveFlat3 copy.cpp  modifyDriveFlat3-catapult-bag.cpp  modifyDriveFlat3-rcpt.cpp  modifyDriveFlat3-repl-status.cpp  modifyDriveFlat3.cpp  modifyDriveFlat3a.cpp  modifyDriveFlat3b.cpp
examples/modifyDriveFlat4/: CMakeLists.txt  modifyDriveFlat4.cpp
examples/modifyDriveFlat5/: CMakeLists.txt  TestEnvironment.h  modifyDriveFlat5.cpp  utils.cpp  utils.h
examples/modifyDriveFlat6/: CMakeLists.txt
examples/replicator/: CMakeLists.txt  replicator.cpp
examples/replicator2/: CMakeLists.txt  replicator.cpp
examples/sendMessage/: CMakeLists.txt  sendMessage.cpp
examples/standalone-tests/: CMakeLists.txt  TestEnvironment.cpp  TestEnvironment.h  approvalReceivedRootCalculated.h  approvalReceivedRootNotCalculated.h  closeDrive.h  list.txt  opinionReceivedRootCalculated.h  opinionReceivedRootNotCalculated.h  runner.cpp  slowClient.h  test.cpp  test2.cpp  testAddReplicatorAfterApproval.cpp  testAddReplicatorBeforeApproval.cpp  testApprovalReceivedRootCalculated.cpp  testApprovalReceivedRootCalculated.h  testApprovalReceivedRootNotCalculated.cpp  testApprovalReceivedRootNotCalculated.h  testApprovalReceivedRootNotCalculatedTwoModifications.cpp  testCancelDuringModification.cpp  testCancelFutureModification.cpp  testCancelRootHashCalculated.cpp  testCloseDriveDownload.cpp  testCloseDriveDuringModification.cpp  testCloseDriveNoModification.cpp  testCloseDriveNoModification.h  testCloseDriveSingleModification.cpp  testCloseDriveSingleModification.h  testDownloadFsTreeFree.cpp  testDownloadLateChannel.cpp  testDownloadNormalChannel.cpp  testDownloadSmallChannel.cpp  testDownloadWithoutChannel.cpp  testInitReplicatorAfterFirstModification.cpp  testInitReplicatorAfterSecondModification.cpp  testInitReplicatorDuringFirstModification.cpp  testManyVerifications.cpp  testOfflineReplicator.cpp  testOfflineReplicatorCancelModification.cpp  (+32 more)
examples/streamExample/: CMakeLists.txt  offchainTest.cpp  streamExample.cpp
examples/streamExample-local/: offchainTest.cpp
examples/supercontract-server/: CMakeLists.txt  main.cpp
examples/supercontract-tests/: CMakeLists.txt  TestEnvironment.h  testSupecontractCreateFileThenRemoveFileAndGetFileSize.cpp  testSupercontractChangeFileType.cpp  testSupercontractCreataTwoFilesWithSameSymbolContentThenCompareFiles.cpp  testSupercontractCreateADirAndCreateAFileOutsideDirAndBothDirAndFileUseSameName.cpp  testSupercontractCreateADirAndCreateAFileOutsideDirAndBothDirAndFileUseSameNameThenCreateAnotherDirAndMoveNameOfDirAndFile.cpp  testSupercontractCreateADirAndCreateAFileOutsideDirAndBothDirAndFileUseSameNameThenRemoveNameOfDirAndFile.cpp  testSupercontractCreateADirAndCreateAFileWithTwoSymbolSlashAsPathSeparator.cpp  testSupercontractCreateADirAndCreateAnotherDirWithNameSymbolSlashOnlyInsideFirstDirAndCreateAFileWIthinSecondDir.cpp  testSupercontractCreateADirInAFormatAndInsideDirCreateAFileUsingTwoSlashSymbolAsPathSeparatorThenTryRemoveFile.cpp  testSupercontractCreateADirInCPPFormatAndInsideDirCreateAFileUsingTwoSlashSymbolAsPathSeparatorThenTryRemoveFile.cpp  testSupercontractCreateADirInJPGFormatAndInsideDirCreateAFileUsingTwoSlashSymbolAsPathSeparatorThenTryRemoveFile.cpp  testSupercontractCreateADirInTXFormatAndInsideDirCreateAFileUsingTwoSlashSymbolAsPathSeparatorThenTryRemoveFile.cpp  testSupercontractCreateADirInTXTTXTFormatAndInsideDirCreateAFileUsingTwoSlashSymbolAsPathSeparatorThenTryRemoveFile.cpp  testSupercontractCreateADirNamedEmptyThenCreateAFileInDir.cpp  testSupercontractCreateADirWithAFileAndBothDirAndFileUseSameName.cpp  (+270 more)
replicator-service/: CMakeLists.txt  replicator-service.cpp  signal_handler.cpp  signal_handler_linux.cpp
src/: ActionList.cpp  CMakeLists.txt  Drive.cpp  FileTransmitter.cpp  FsTree.cpp  LibTorrentSession.cpp  LibTorrentWrapper.cpp  PrepareActionListToUpload.cpp  StorageClient.cpp  main.cpp  utils.cpp
(+534 files in other folders)
